--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
   background-color: #ffd6b1;
   position: relative;
   top: 170px;
-  left: 650px;
+  left: 36.5%;
   width: 650px;
   height: 50vh;
   display: none;
@@ -88,5 +88,17 @@
   width: 100px;
   height: 3vh;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 950px) {
+  .navbar {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .navbar {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
