--- a/style.scss
+++ b/style.scss
@@ -46,7 +46,7 @@ $h1-margin-left: 250px;
     background-color:rgb(255, 214, 177);
     position: relative;
     top: 170px;
-    left: 650px;
+    left: 36.5%;
     width: 650px;
     height: 50vh;
     display: none;
@@ -80,6 +80,22 @@ $h1-margin-left: 250px;
     width: 100px;
     height: 3vh;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 950px) { 
+  .navbar {
+      width: 100%;
+  }
+
+}
+
+
+@media only screen and (max-width: 650px) {
+    .navbar {
+        width: 100%;
+    } 
+
+  
 }
 
 
